--- a/src/Header.css
+++ b/src/Header.css
@@ -41,3 +41,38 @@
   border: 1px solid;
   border-radius: 4px;
 } */
+.resetLink{
+  display: flex;
+  
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border:1px solid;
+ 
+  color:blue;
+  width: 100%;
+  background-color: lightsalmon;
+  
+}
+.resetLink span{
+ 
+ text-align: center;
+  width: 100%;
+}
+.header_logo{
+  display: flex;
+  align-items: center;
+
+}
+.signUpContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border:1px solid;
+  background-color: lightblue;
+  width: 100%;
+  margin-top:20px;
+  color:blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
